k8s.templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME-deployment
spec:
  replicas: 3
  revisionHistoryLimit:
  selector:
    matchLabels:
      app: APP_NAME
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        env: "prod"
        app: "APP_NAME"
        version: "BUILD_VERSION"
    spec:
      containers:
      - name: APP_NAME
        image: REGISTRY/APP_NAME:BUILD_VERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: APP_NAME
        resources:
          limits:
            cpu: ".5" 
            memory: "200Mi"
          requests: 
            cpu: ".1"
            memory: "100Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 300
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 10
