k8s.templates/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: APP_NAME
  name: APP_NAME-service
spec:      
  ports:
  - name: APP_NAME
    port: 81
    targetPort: 8080
  selector:
    app: APP_NAME
  sessionAffinity: None
  type: ClusterIP
