k8s.templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: APP_NAME-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: HOST
    http:
      paths:
      - path: /
        backend:
          serviceName: APP_NAME-service
          servicePort: 81
